#Added Save Text Feature   -using fileSave.js(cdn) #Fixed Small UI Problems   -dropdown alignment #Cleaned More un-wanted Javascript

--- a/static/masonry/style/css.scss
+++ b/static/masonry/style/css.scss
@@ -17,11 +17,11 @@
 			display: grid;
 			height: 100%;
 			width: 100%;
-			gap: 5px;
+			gap: 3px;
 			grid-template-columns: 50% 50%;
 			grid-template-rows: 50% 50%;
 			div {
-				max-height: 310px;
+				max-height: 307px;
 			}
 		}
 		.mapcontainer {
@@ -56,8 +56,7 @@
 }
 .seg,
 .diac,
-.ner,
-.pos {
+.ner {
 	direction: rtl;
 }
 .pos {
